# caged

./: .gitignore  README.md  pyproject.toml
cagged/: __init__.py  __main__.py  cli.py  misc.py
cagged/analyzer/: analyzer.py
cagged/analyzer/metadata/: __init__.py  detector.py  empty_information.py  potentially_compromised_email_domain.py  release_zero.py  repository_integrity_mismatch.py  typosquatting.py
cagged/analyzer/metadata/npm/: __init__.py  empty_information.py  potentially_compromised_email_domain.py  release_zero.py  typosquatting.py
cagged/analyzer/metadata/pypi/: __init__.py  empty_information.py  potentially_compromised_email_domain.py  release_zero.py  repository_integrity_mismatch.py  single_python_file.py  typosquatting.py
cagged/analyzer/sourcecode/: __init__.py  code-execution.yml  exec-base64.yml  obfuscation.yml  shady-links.yml
cagged/dynamic/: analyze.py
cagged/ml/: analyze.py  model.joblib
cagged/reporters/: sarif.py
cagged/scanners/: __init__.py  npm_package_scanner.py  npm_project_scanner.py  pypi_package_scanner.py  pypi_project_scanner.py  scanner.py
cagged/utils/: archives.py  package_info.py
docs/: conf.py  index.rst  install.rst  requirements.txt
docs/dynamic/: index.rst
docs/static/: index.rst
docs/static/metadata/: index.rst
docs/static/source_code/: architecture.rst  custom_rules.rst  default_rules.rst  index.rst  semgrep.rst
