[tool.poetry]
name = "cagged"
version = "0.1.8"
description = ""
authors = ["Родион Гудзь <rodion@gudz.ml>"]
readme = "README.md"

[tool.poetry.scripts]
caged = "cagged.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.3"
requests = "^2.28.2"
prettytable = "^3.6.0"
semantic-version = "^2.10.0"
pyyaml = "^6.0"
joblib = "^1.2.0"
docker = "^6.0.1"
termcolor = "^2.2.0"
pandas = "^1.5.3"
tarsafe = "^0.0.5"
pygit2 = "^1.11.1"
semgrep = "^1.15.0"
python-whois = "^0.8.0"
rich-click = "^1.6.1"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
